feat: setup backend deployment and fix overdue logic

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -24,13 +24,17 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           
-          # Clone the HF Space repo
+          # Clone the HF Space repo (only the latest commit for speed)
           git clone https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME space_repo
           
-          # Copy server files to the space repo root including hidden files
-          cp -r server/. space_repo/
+          # Remove existing files in space_repo to ensure a clean sync (excluding .git)
+          find space_repo -mindepth 1 -not -path 'space_repo/.git*' -delete
+          
+          # Copy server files to the space repo root
+          # We use rsync to avoid node_modules, .env, and .git if they exist
+          rsync -av server/ space_repo/ --exclude node_modules --exclude .env --exclude .git
           
           cd space_repo
           git add .
-          git commit -m "feat: sync backend from github" || echo "No changes to commit"
+          git commit -m "deploy: sync backend from github commit ${GITHUB_SHA::7}" || echo "No changes to commit"
           git push https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME main
