--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -37,4 +37,4 @@ jobs:
           cd space_repo
           git add .
           git commit -m "deploy: sync backend from github commit ${GITHUB_SHA::7}" || echo "No changes to commit"
-          git push https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME main
+          git push origin main
