chore: upgrade node to v20 for supabase-js compatibility

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,16 @@
-FROM node:18-alpine
+FROM node:20-alpine
 
 WORKDIR /app
 
+# Set environment
+ENV PORT=7860
+ENV NODE_ENV=production
+
 COPY package*.json ./
-RUN npm install --production
+RUN npm install --omit=dev
 
 COPY . .
 
 EXPOSE 7860
 
-CMD ["npm", "start"]
+CMD ["node", "server.js"]
