--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -24,17 +24,20 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           
-          # Clone the HF Space repo (only the latest commit for speed)
+          # Clone the HF Space repo with credentials
           git clone https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME space_repo
           
           # Remove existing files in space_repo to ensure a clean sync (excluding .git)
           find space_repo -mindepth 1 -not -path 'space_repo/.git*' -delete
           
           # Copy server files to the space repo root
-          # We use rsync to avoid node_modules, .env, and .git if they exist
           rsync -av server/ space_repo/ --exclude node_modules --exclude .env --exclude .git
           
           cd space_repo
+          
+          # Configure git remote with token for push
+          git remote set-url origin https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$SPACE_NAME
+          
           git add .
           git commit -m "deploy: sync backend from github commit ${GITHUB_SHA::7}" || echo "No changes to commit"
           git push origin main
